[tool.poetry]
name = "apart-finder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "apart_finder"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.17.2"
pandas = "^2.2.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
